--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<header class="menu container">
 			<div class="grid-5">
-				<a href="#"><img src="img/Vanbook.png" alt="Vanbook"></a>
+				<a href="#"><img src="img/vanbook.png" alt="Vanbook"></a>
 			</div>
 			<nav class="grid-11">
 				<ul>
